--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-publish = "public/"
+publish = "public"
 
-functions = "functions/"
+functions = "functions"
 
 [[redirects]]
 from = "/logging"
